# xorion-web3-os

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  RELEASE.md  TERMS_AND_CONDITIONS.md
.github/workflows/: ci.yml
browser-extension/: README.md  manifest.json  popup.html  popup.js
cli/: main.rs
docs/: FAQ.md  redox-setup-guide.md
examples/: contract_demo.rs  dao_voting.rs  demo.rs  ipfs_upload.rs  kernel_demo.rs  private_transfer.rs  rpc_demo.rs  simple_wallet.rs
src/: error.rs  kernel.rs  lib.rs  wallet.rs
src/contract/: erc20.rs
src/rpc/: ethereum.rs  mod.rs  solana.rs
tests/: integration.rs
xorion-governance/: Cargo.toml
xorion-governance/examples/: governance_demo.rs
xorion-governance/src/: delegation.rs  lib.rs  voting.rs
xorion-governance/tests/: governance_tests.rs
xorion-gui/: Cargo.toml
xorion-gui/src/: main.rs
xorion-gui/src/components/: dashboard.rs  mod.rs  receive.rs  send.rs  settings.rs
xorion-privacy/: Cargo.toml
xorion-privacy/examples/: privacy_demo.rs
xorion-privacy/src/: cache.rs  lib.rs
xorion-privacy/src/circuits/: balance_proof.rs  mod.rs
xorion-privacy/tests/: privacy_tests.rs
xorion-runtime/: Cargo.toml
xorion-runtime/examples/: simple_dapp.rs
xorion-runtime/src/: api.rs  lib.rs  runtime.rs  sandbox.rs
xorion-runtime/tests/: runtime_tests.rs
xorion-scheme/: Cargo.toml
xorion-scheme/src/: handler.rs  main.rs
xorion-storage/: Cargo.toml
xorion-storage/examples/: storage_demo.rs
xorion-storage/src/: cache.rs  encryption.rs  ipfs.rs  lib.rs  vfs.rs
xorion-storage/tests/: storage_tests.rs
xorion-webapp/: Cargo.toml
xorion-website/: docs.html
xos-governance/: Cargo.toml
xos-governance/src/: governor.rs  lib.rs  proposal.rs  timelock.rs  treasury.rs
xos-gui/: Cargo.toml
xos-gui/src/: main.rs
xos-privacy/: Cargo.toml
xos-privacy/src/: lib.rs  proof.rs
xos-privacy/src/circuits/: age_verify.rs  private_tx.rs
xos-runtime/: Cargo.toml
xos-runtime/src/: api.rs  ipfs_loader.rs  lib.rs
xos-scheme/: Cargo.toml
xos-scheme/src/: handler.rs  main.rs  protocol.rs
xos-storage/: Cargo.toml
xos-storage/src/: pinning.rs
xos-webapp/: deploy.sh  index.html
xos-webapp/src/: app.rs  main.rs
xos-webapp/src/components/: dashboard.rs  mod.rs  receive.rs  send.rs  settings.rs
xos-website/: index.html
