[workspace]
members = [".", "xos-scheme", "xos-gui", "xos-runtime", "xos-storage", "xos-governance"]

[package]
name = "xos-sdk"
version = "1.0.0"
edition = "2021"
description = "X-OS Web3 SDK"
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.11"
sha3 = "0.10"
hex = "0.4"
bip39 = "2.0"
bip32 = "0.5"
secp256k1 = { version = "0.28", features = ["rand"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
zeroize = { version = "1.6", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
async-trait = "0.1"
ethabi = "18.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
tempfile = "3"
