[package]
name = "xorion-governance"
version = "0.1.0"
edition = "2021"
description = "Xorion DAO Governance — proposals, voting, delegation, treasury, timelock"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha3 = "0.10"
hex = "0.4"
tracing = "0.1"

xorion-wallet-sdk = { path = ".." }

[dev-dependencies]
tempfile = "3.8"
