[package]
name = "xos-governance"
version = "1.0.0"
edition = "2021"
description = "X-OS DAO Governance — proposals, voting, delegation, treasury, timelock"
license = "MIT"
repository = "https://github.com/IDevNation/Xorion-Web3-Beta-Multi-Chain-Wallet-SDK"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha3 = "0.10"
hex = "0.4"
tracing = "0.1"

xorion-sdk = { version = "1.0.0", path = ".." }

[dev-dependencies]
tempfile = "3.8"
