[package]
name = "xorion-gui"
version = "1.0.0"
edition = "2021"
description = "Xorion Web3 OS — Desktop wallet GUI"
license = "MIT"

[dependencies]
# Dioxus desktop framework
dioxus = { version = "0.5", features = ["desktop"] }

# Xorion SDK (wallet, RPC, contracts)
xorion-sdk = { version = "1.0.0", path = ".." }

# QR code generation for receive addresses
qrcode = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Async runtime (already pulled via SDK, explicit for clarity)
tokio = { version = "1.35", features = ["full"] }
