[package]
name = "xorion-zk"
version = "1.0.0"
edition = "2021"
description = "Xorion zk-SNARKs Privacy Layer — zero-knowledge proofs for private transactions"
license = "MIT"
repository = "https://github.com/IDevNation/xorion-web3-os"

[dependencies]
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
rand = "0.8"
sha3 = "0.10"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

xorion-sdk = { version = "1.0.0", path = ".." }

[dev-dependencies]
tempfile = "3.8"
