[package]
name = "xorion-core"
version = "0.1.0"
edition = "2021"
description = "Xorion WASM dApp Runtime — sandboxed execution for Web3 dApps"
license = "MIT"
repository = "https://github.com/IDevNation/xorion-web3-os"

[dependencies]
wasmtime = "19"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
sha3 = "0.10"

# Xorion SDK for wallet operations
xorion-sdk = { version = "0.4.0", path = ".." }

[dev-dependencies]
tempfile = "3.8"
tracing-subscriber = "0.3"
