[package]
name = "xorion-ipfs"
version = "0.1.0"
edition = "2021"
description = "Xorion IPFS-backed decentralized storage with client-side encryption"
license = "MIT"
repository = "https://github.com/IDevNation/xorion-web3-os"

[dependencies]
# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.6", features = ["derive"] }

# IPFS HTTP API (via reqwest — no heavy libp2p dependency)
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Utilities
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
sha3 = "0.10"
hex = "0.4"

xorion-sdk = { version = "0.4.0", path = ".." }

[dev-dependencies]
tempfile = "3.8"
