[package]
name = "xos-webapp"
version = "1.0.0"
edition = "2021"
description = "X-OS Web3 Wallet - Browser-based Web Application"
license = "MIT"
repository = "https://github.com/IDevNation/X-OS-Web3-Beta-Multi-Chain-Wallet-SDK"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-web = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "LocalStorage", "Console"] }
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
gloo-net = "0.4"
ethers-core = "2.0"
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"
qrcode-generator = "4.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
