[package] 
name = "xos-governance" 
version = "1.0.0" 
edition = "2021" 
description = "X-OS DAO Governance" 
license = "MIT" 
 
[dependencies] 
xorion-web3-sdk = { version = "2.0.0", path = ".." } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
thiserror = "1.0" 
sha3 = "0.10" 
hex = "0.4" 
tracing = "0.1" 
