[package] 
name = "xos-gui" 
version = "1.0.0" 
edition = "2021" 
description = "X-OS Desktop GUI" 
license = "MIT" 
 
[dependencies] 
xos-sdk = { version = "1.0.0", path = ".." } 
dioxus = { version = "0.5", features = ["desktop"] } 
qrcode = "0.14" 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
tokio = { version = "1.35", features = ["full"] } 
