[package] 
name = "xos-runtime" 
version = "1.0.0" 
edition = "2021" 
description = "X-OS WASM dApp Runtime" 
license = "MIT" 
 
[dependencies] 
xos-sdk = { version = "1.0.0", path = ".." } 
wasmer = "3.2.0-alpha.1" 
wasmer-wasi = "3.2.0-alpha.1" 
wasmer-compiler-cranelift = "3.2.0-alpha.1" 
tokio = { version = "1.35", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
anyhow = "1.0" 
thiserror = "1.0" 
tracing = "0.1" 
reqwest = { version = "0.11", features = ["json"] } 
hex = "0.4" 
