[package] 
name = "xos-scheme" 
version = "1.0.0" 
edition = "2021" 
description = "X-OS Redox wallet:/ scheme daemon" 
license = "MIT" 
 
[dependencies] 
xos-sdk = { version = "1.0.0", path = ".." } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
tokio = { version = "1.35", features = ["full"] } 
tracing = "0.1" 
thiserror = "1.0" 
