[package] 
name = "xos-scheme" 
version = "1.0.0" 
edition = "2021" 
description = "X-OS Redox wallet:/ scheme daemon" 
license = "MIT" 
 
[dependencies] 
xorion-web3-sdk = { version = "2.0.0", path = ".." } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
tokio = { version = "1.35", features = ["full"] } 
tracing = "0.1" 
thiserror = "1.0" 
log = "0.4.29"
env_logger = "0.11.10"
sha3 = "0.10.8"
hex = "0.4.3"
