[package] 
name = "xos-storage" 
version = "1.0.0" 
edition = "2021" 
description = "X-OS IPFS Storage" 
license = "MIT" 
 
[dependencies] 
aes-gcm = "0.10" 
argon2 = "0.5" 
rand = "0.8" 
zeroize = { version = "1.6", features = ["derive"] } 
reqwest = { version = "0.11", features = ["json", "multipart"] } 
tokio = { version = "1.35", features = ["full"] } 
async-trait = "0.1" 
thiserror = "1.0" 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
tracing = "0.1" 
sha3 = "0.10" 
hex = "0.4" 
